@@ -11,9 +11,13 @@ Summary of important user-visible changes for statistics 1.5.0:
  
  ** chi2gof (fully Matlab compatible. bug #46764)
  
+ ** f2fx (missing function: bug #48146)
+ 
  ** friedman (fully Matlab compatible)
  
  ** fillmissing (patch #10102)
+ 
+ ** grpstats (complementary to manova1)
  
  ** libsvmread, libsvmwrite (I/O functions for LIBSVM data files)
  
